bug with aligning button items center

--- a/static/after.css
+++ b/static/after.css
@@ -23,6 +23,7 @@ body {
     flex-direction:column;
     justify-contents:center;
     align-items:center;
+    text-align: center; /* Optional: Center-align text content */
     margin: 0 auto;
     max-width: 1000px;
     margin-top:3%;
@@ -47,9 +48,6 @@ body {
 
 .directory{
     display:flex;
-    justify-contents:center;
-    flex-direction:row;
-    align-items:center;
     height:auto;
     margin-top:15px;
     width:100%;
@@ -65,10 +63,14 @@ body {
 }
 
 .buttons{
-    width:85%;
+    display:flex;
+    flex-direction:rows;
+    width:70%;
     margin-left:15px;
     height:100px;
     background-color:#fff;
+    align-items:center;
+    justify-contents:center;
 }
 
 .txt{
@@ -161,7 +163,25 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    text-decoration: underline;
-    color: #223fe6;
+#notepad-icon{
+    font-size:50px;
+}
+
+#calendar-icon{
+    font-size:50px;
+}
+
+.button{
+    text-align:center;
+    padding:10px;
+    border-radius:15px;
+    margin-left:15px;
+    margin-right:15px;
+    width:80px;
+    transition:0.2s ease-in-out;
+}
+
+.button:hover{
+    transition:0.3s ease-in-out;
+    background-color: #f4f4f4;
 }
